--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,18 @@
 @tailwind utilities;
 
 
-html { 
-  @apply antialiased;
-}
+@layer base {
+  html { 
+    @apply antialiased;
+  }
 
-html, body, #root {
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-}
+  html, body, #root {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+  }
 
-body {
-  @apply text-white bg-gray-800;
+  body {
+    @apply text-white bg-gray-800;
+  }
 }
